--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -10,7 +10,23 @@
 	<table border="1" align="center">
 		<tr>
     		<td width="50" height="50">
-    			
+				 <table border="0">
+				 	<tr>
+				 		<td>
+				 			<a href="">
+				 			<h1>Inicio</h1>
+				 			</a>
+				 		</td>
+				 		<td>
+				 			<a href="Quienes-somos.html">
+				 			<h2>¿Quienes somos?</h2>
+				 			</a>
+				 		</td>
+				 		<td>
+				 			<h2>¿Que es necesario para entrar a nuestro equipo?</h2>
+				 		</td>
+				 	</tr>
+				 </table>   			
     		</td>
     	</tr>
     	<tr>
