--- a/PROJECT/Quienes-somos.html
+++ b/PROJECT/Quienes-somos.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>¿Quienes somos?</title>
+	<link rel="stylesheet" type="text/css" href="CSS/All.css">
 </head>
-<body>
+<body class="quienesSomos">
 	<h1>¿Quienes somos?</h1>
 	<p>Somos un club que promueve la enseñanza de valores a través de la competencia. Fomentamos el ejercicio físico y brindamos a nuestros socios actividades deportivas, sociales, culturales y recreativas de primer nivel para las distintas etapas de sus vidas, mediante una gestión confiable y transparente, con un capital humano en capacitación constante e incorporando las últimas tendencias en tecnología e infraestructura.</p>
 	<h1>Valores</h1>
