--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -4,16 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="CSS/BiguaStyle.css">
+	<link rel="stylesheet" type="text/css" href="CSS/All.css">
 </head>
-<body>
+<body class="home">
 	<table border="1" align="center">
 		<tr>
     		<td width="50" height="50">
 				 <table border="0">
 				 	<tr>
 				 		<td>
-				 			<a href="">
+				 			<img src="images and videos/Bigualogo.png" width="150" height="150">
+				 		</td>
+				 		<td>
 				 			<h1>Inicio</h1>
 				 			</a>
 				 		</td>
@@ -23,7 +25,7 @@
 				 			</a>
 				 		</td>
 				 		<td>
-				 			<h2>¿Que es necesario para entrar a nuestro equipo?</h2>
+				 			<h2>¿Que es necesario para entrar a nuestro equipo de basketball?</h2>
 				 		</td>
 				 	</tr>
 				 </table>   			
@@ -31,10 +33,15 @@
     	</tr>
     	<tr>
     		<td width="850" height="400">
+    		<video controls autoplay muted>
+    			<source src="" type="video/mp4">
+    		</video>
     		</td>
     	</tr>
     	<tr>
     		<td width="400" height="50">
+    			<a href="mailto:lucas.rodriguez@student.ivythomas.edu.uy?subject=Quiero%20Unirme%20">
+    	   			<h3>¿Te interesa? Contactanos</h3>
     	</tr>
     	
 
