--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -25,7 +25,9 @@
 				 			</a>
 				 		</td>
 				 		<td>
+				 			<a href="Que-es-necesario-para-entrar-a-nuestro-equipo-de-basketball.html">
 				 			<h2>¿Que es necesario para entrar a nuestro equipo de basketball?</h2>
+				 		    </a>
 				 		</td>
 				 	</tr>
 				 </table>   			
@@ -33,15 +35,15 @@
     	</tr>
     	<tr>
     		<td width="850" height="400">
-    		<video controls autoplay muted>
-    			<source src="" type="video/mp4">
+    		<video width= 100% controls autoplay muted>
+    			<source src="images and videos/Biguavideo.mp4" type="video/mp4">
     		</video>
     		</td>
     	</tr>
     	<tr>
     		<td width="400" height="50">
     			<a href="mailto:lucas.rodriguez@student.ivythomas.edu.uy?subject=Quiero%20Unirme%20">
-    	   			<h3>¿Te interesa? Contactanos</h3>
+    	   			<h3>¿Te interesa unirte al equipo de basketball? Contactanos</h3>
     	</tr>
     	
 
